# framework.system.deviced

./: AUTHORS  CMakeLists.txt
doxygen/: Doxyfile.in
packaging/: README.api  crash-daemon.service  deviced-tools.manifest  deviced.efl  deviced.manifest  deviced.service  deviced.spec  liblogd-db.manifest  liblogd.manifest  shutdown-notify.service
scripts/: direct_set_debug.sh  dump_pm.sh  mmc-smack-label  movi_format.sh  set_usb_debug.sh  start_dr.sh
src/apps/: apps.h  cool-down.c  launch.c  lowbat.c  lowmem.c  mmc.c  poweroff.c  system.c  usb.c  usbotg.c
src/auto-test/: CMakeLists.txt  archive.c  board-info.c  boot.c  cool-down.c  cpu-info.c  cradle.c  earjack.c  haptic.c  hdmi.c  keyboard.c  main.c  power-supply.c  result.c  storage.c  test.c  test.h  time.c  tvout.c  udev.c  usb.c
src/auto-test/activation/dbus/: CMakeLists.txt  org.tizen.system.deviced-auto-test.service
src/auto-test/activation/systemd/: CMakeLists.txt  deviced-auto-test.service
src/battery/: battery-micro-emul.conf  battery.c  config.h  lowbat-handler-wearable.c  lowbat-handler.c  power-supply-wearable.c  power-supply.c  weaks.c  weaks.h
src/block/: block.c  block.h  ext4.c  vfat.c
src/bluetooth/: bluetooth.c
src/board/: board-info.c
src/control/: control.c
src/cool-down/: cool-down-micro.c  cool-down.c
src/core/: buxton-helper.c  buxton-helper.h  common.c  common.h  core.c  core.h  data.h  device-change-handler.c  device-handler.h  device-nodes.c  device-nodes.h  device-notifier.c  device-notifier.h  device-plugin.c  device-plugin.h  devices.c  devices.h  dump.c  edbus-handler.c  edbus-handler.h  emulator.h  execute.c  list.h  log.h  lowstorage.c  main.c  noti.c  noti.h  power-supply.c  power-supply.h  predefine.c  predefine.h  queue.c  queue.h  sig-handler.c  sysnoti.c  udev.c  udev.h  weaks.c  weaks.h
src/cpu/: cpu-handler.c
src/devicectl/: CMakeLists.txt  devicectl.c
src/deviced/: dd-block.h  dd-control.h  dd-deviced-managed.h  dd-deviced.h  dd-display.h  dd-haptic.h  dd-led.h  dd-mmc.h  dd-storage.h  haptic-module.h
src/display/: alpm-wearable.c  alpm.c  auto-brightness-sensorhub.c  auto-brightness.c  brightness-mobile.c  core.c  core.h  device-interface.c  device-interface.h  display-actor.h  display-dbus.c  display-emul-mobile.conf  display-emul-wearable.conf  display-emul.conf  display-exynos.conf  display-mobile.conf  display-msm.conf  display-ops.c  display-ops.h  display-tv.conf  display-wearable.conf  enhance-mobile.c  enhance-wearable.c  enhance.c  enhance.h  hbm.c  hbm.h  input.c  key-filter-micro.c  key-filter-mobile.c  key-filter-tv.c  key-filter-wearable.c  key-filter.c  lock-detector.c  lock-detector.h  logging.c  mbm.c  poll.c  poll.h  setting.c  (+6 more)
src/extcon/: cradle.c  earjack.c  extcon.c  extcon.h  hdmi.c  keyboard.c
src/fsck-msdos/: CMakeLists.txt
src/hall/: hall-handler.c  hall-handler.h
src/haptic/: HW_touch_30ms_sharp.ivt  external.c  haptic.c  haptic.h  standard.c
src/hdmi-cec/: cec.c  cec.h  libcec.c  libcec.h
src/icd/: icd-integrity.c  icd-integrity.h  icd.c  sha2.c  sha2.h
src/led/: conf.c  conf.h  led.conf  led.xml  pattern.c  rgb.c  torch.c  xml.c  xml.h
src/libdeviced/: CMakeLists.txt  block.c  control.c  dbus.c  deviced-conf.c  deviced-noti.c  deviced-util.c  display.c  haptic.c  led.c  mmc.c  storage.c
src/logd/: CMakeLists.txt
src/logd/src/: CMakeLists.txt
src/logd/src/battery/: CMakeLists.txt  calibration.c  power-monitor.cpp
src/logd/src/liblogd/: CMakeLists.txt  logd.c  logd.h
src/logd/src/liblogd-db/: CMakeLists.txt  db.c  db.h  devices.c  devices.h  events.c  events.h  liblogd-db.pc.in  logd-db.h  padvisor.c  padvisor.h  proc-stat.c  proc-stat.h
src/logd/src/liblogd-db/tests/: CMakeLists.txt  foreach-test.c  padvisor-test.c
src/logd/src/liblogd/tests/: CMakeLists.txt  store-event-test.c
src/logd/src/shared/: CMakeLists.txt  logd-taskstats.h  macro.h  netlink.c  netlink.h  proc-events.c  proc-events.h  socket-helper.c  socket-helper.h  task-stats.c  task-stats.h
src/logd_grabber/: battery.c  battery.h  config.c  config.h  display.c  display.h  event.c  event.h  journal-reader.c  journal-reader.h  logd-grabber.c  logd-grabber.h  mmc.c  mmc.h  nlproc-stat.c  nlproc-stat.h  timer.c  timer.h
src/mmc/: app2ext.c  app2ext.h  config.c  config.h  cprm.c  exfat.c  ext4.c  mmc-handler.c  mmc-handler.h  vfat.c
src/newfs-msdos/: CMakeLists.txt
src/ode/: noti.c  noti.h  ode.c  ode.h
src/pass/: pass-core.c  pass-core.h  pass-gov-radiation.c  pass-gov-step.c  pass-gov.h  pass-hotplug.h  pass-micro.conf  pass-plugin.c  pass-plugin.h  pass-table.h  pass-target.h  pass-util.h  pass.c  pass.conf  pass.h
src/pmqos/: pmqos-plugin.c  pmqos.c  pmqos.conf  pmqos.h
src/power/: power-handler.c  power-handler.h  power-wearable.conf  power.conf  systemd-power.c
src/powersaver/: powersaver-micro.c  powersaver-mobile.c  powersaver-wearable.c  powersaver.c  powersaver.h  weaks.h
src/predefine_act_plugin/: CMakeLists.txt  xxx-predefine.c
src/proc/: cpu-info.c  pmon-handler.c  proc-handler.c  proc-handler.h
src/restarter/: CMakeLists.txt
src/shared/: CMakeLists.txt  dbus.c  dbus.h  deviced-systemd.c  log-macro.h
src/sleep/: sleep.c  sleep.h
src/storage/: storage.c
src/ta/: ta-handler.c
src/telephony/: telephony.c
src/testmode/: testmode.c
src/ticker/: ticker.c  ticker.h
src/tima/: noti.c  noti.h  tima-lkm.c  tima-lkm.h  tima-pkm.c  tima-pkm.h  tima.c
src/time/: time-handler.c
src/touch/: touch-controller.c  touch-controller.h  touch-plugin.c  touch-plugin.h  touch-util.h  touch.c  touch.h  touchkey.c  touchscreen.c
src/touchscreen/: touchscreen.c
src/tzip/: tzip-utility.c  tzip.c
src/usb/: usb-client-config.c  usb-client-configuration-micro.conf  usb-client-configuration-mobile.conf  usb-client-configuration-wearable.conf  usb-client-configuration.conf  usb-client-control.c  usb-client-dbus.c  usb-client-event-sdk.c  usb-client-event.c  usb-host.c  (+21 more)
systemd/: deviced.service  early-booting-done.service  org.tizen.system.deviced.service  shutdown-notify.service  zbooting-done.service
test/: config
(+17 files in other folders)
